# Brimus3

./: .gitignore  CMakeLists.txt  holidays.txt  main.cpp  scrap.txt  todo.txt
Brimus/: CMakeLists.txt  basket.cpp  basket.h  command.cpp  command.h  input_file_parser.cpp  input_file_parser.h  input_strategy_file.cpp  input_strategy_file.h  launch_rules.cpp  launch_rules.h  stdafx.h  strategy_tester.cpp  strategy_tester.h
Brimus-Test/: CMakeLists.txt
Brimus-Test/basic_tests/: CMakeLists.txt  basket_check.cpp  cparse_check.cpp  input_file_parser_check.cpp  launch_rules_check.cpp  sample.cpp
cparse/: CMakeLists.txt
desige-notes/: 001-main.txt  002-strategy_tester.txt  003-input_file_parser.txt  004-launch_rules.txt  005-basket.txt
